# has

./: .tool-versions  Cargo.toml  Makefile  README.md  dprint.json
.github/workflows/: ci.yml  release.yml
features/: args.feature  command-output.feature  empty-output.feature  file-content-regex.feature  file-content.feature  file-name-and-content.feature  file-name-glob.feature  file-name.feature  file.feature  folder.feature  git-author.feature  git-branch-active.feature  git-branch-inactive.feature  git-branch.feature  git-changes-uncommitted.feature  git-commits-by-author.feature  git-commits-unpushed.feature  help.feature  make-target.feature  node-dependency.feature  node-dev-dependency.feature  uncommitted-changes.feature  unpushed-changes.feature  unpushed-commits.feature
features/filesystem/: file-name-and-content.feature  file-name.feature  folder.feature  wrong-usage.feature
features/filesystem/features/: file-content-regex.feature  file-content.feature  file-name-glob.feature
features/git/: git-branch-active.feature  git-branch.feature  git-changes-uncommitted.feature  git-commits-by-author.feature  git-commits-unpushed.feature  wrong-usage.feature
features/make/: make-target.feature  wrong-usage.feature
features/node.js/: node-dependency.feature  wrong-usage.feature
features/shell-command/: command-output.feature  wrong-usage.feature
src/: cli.rs  errors.rs  main.rs
src/checks/: empty_output.rs  file.rs  folder.rs  git_branch.rs  makefile.rs  mod.rs  node_js.rs  uncommitted_changes.rs  unpushed_changes.rs  unpushed_commits.rs
src/fs/: file_content.rs  mod.rs
src/git/: current_branch.rs  has_author.rs  has_branch.rs  has_commits_by_author.rs  has_unpushed_commits.rs  mod.rs
tests/: cucumber.rs
