[package]
name = "has"
version = "0.1.0"
edition = "2021"

[dependencies]
strip-ansi-escapes = "0.1.1"

[dev-dependencies]
cucumber = "0.14"
tempfile = "3"
tokio = { version = "1.21.2", features = ["fs", "io-util", "macros", "process", "rt"] }

[[test]]
name = "cucumber" # this should be the same as the filename of your test target
harness = false # allows Cucumber to print output instead of libtest
test = false # don't run this as part of "cargo test"

[profile.release]
strip = "symbols"
lto = true
panic = 'abort'
