[package]
name = "has"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[dependencies]
glob = "0.3.0"
regex = { version = "1.6.0", default-features = false, features = ["std"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0"
strip-ansi-escapes = "0.1.1"

[dev-dependencies]
big_s = "1.0.2"
cucumber = "0.14"
pretty = { package = "pretty_assertions", version = "1.3.0" }
shell-words = "1.1.0"
tempfile = "3"
tokio = { version = "1.21.2", features = ["fs", "io-util", "macros", "process", "rt"] }

[[test]]
name = "cucumber" # this should be the same as the filename of your test target
harness = false # allows Cucumber to print output instead of libtest
test = false # don't run this as part of "cargo test"

[profile.release]
strip = "symbols"
lto = true
panic = 'abort'

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
